--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ nav{
 }
 
 nav .container{
-    background-color: var(--beige);
+    background-color: var(--brown);
     display: flex;
     justify-content: space-between;
     align-items: center;
