--- a/styles.css
+++ b/styles.css
@@ -24,10 +24,13 @@ body {
 	font-optical-sizing: auto;
 	font-style: normal;
 	font-size: 20px;
-	padding-bottom:1000px;
-    padding-left: 20px;
-    padding-right: 30px;
+    max-height: 100vh;
 }
+
+html { 
+    transform: scale(0.87);
+    transform-origin: top; 
+} 
 
 a {
 	text-decoration: none;
@@ -333,7 +336,10 @@ h3 {
 }
 
 .work-experience {
+    max-height: 90vh;
 	.jobs {
+        transform: scale(0.8);
+        transform-origin: top; 
 		display:flex;
 		gap:30px;
 		@media(max-width:1024px){
@@ -496,99 +502,21 @@ h3 {
 	}
 }
 
-.chatbot {
-	.chatbot-blue {
-		background-color: var(--brown-100);
-		border-radius:30px;
-		padding:30px;
-		gap:30px;
-		display:flex;
-		@media (max-width:1024px){
-			flex-direction:column;
-		}
-		p {
-			margin-bottom:30px;
-		}
-		.chat-info {
-			flex:3;
-			padding-right:30px;
-		}
-		.chat-box {
-			flex:4;
-			background:white;
-			border-radius:15px;
-			padding:30px;
-			display:flex;
-			flex-direction:column;
-			.scroll-area {
-				max-height:300px;
-				height:300px;
-				overflow-y:scroll;
-				ul {
-					display:flex;
-					flex-direction:column;
-					justify-content:flex-end;
-					gap:15px;
-					li {
-						display:flex;
-						align-items:center;
-						gap:15px;
-
-						&:nth-child(even){
-							text-align:right;
-							justify-content:flex-end;
-							flex-direction:row-reverse;
-							span {
-								background-color: var(--beige);
-							}
-						}
-
-						span {
-							background-color: var(--brown-400);
-							width:64px;
-							height:64px;
-							border-radius:50%;
-							display:inline-flex;
-							align-items:center;
-							justify-content:center;
-							@media(max-width:768px){
-								width:48px;
-								height:48px;
-							}
-						}
-						div {
-							flex:1;
-						}
-					}
-				}
-			}
-
-			.chat-message {
-				display:flex;
-				margin-top:15px;
-				gap:15px;
-				input {
-					border-radius:10px;
-					flex:1;
-					padding:15px;
-					border:1px solid transparent;
-					background-color: var(--base-100);
-					&:hover {
-						outline:none;
-						background-color:white;
-						border:1px solid var(--base-100);
-					}
-					&:focus {
-						outline:none;
-						background-color:white;
-						border:1px solid var(--base-100);
-					}
-				}
-				button {
-					border:none;
-					cursor:pointer;
-				}
-			}
-		}
-	}
-}
+.footer {
+    box-sizing: border-box;
+    margin-top: 50px;
+    font-family: sans-serif;
+    overflow: hidden;     
+    position: relative;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 2rem;
+    background: var(--brown);
+    color: white;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.2rem;
+  }
